force-app/main/default/objects/SAJ_MDC_Component__c/SAJ_MDC_Component__c.object-meta.xml
<CustomObject>
    <label>MDC Component</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MDC Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDC Components</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>