force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Diff__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Diff__c</fullName>
    <formula>SAJ_MDC_Component_Version__r.SAJ_Diff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff</label>
    <type>Checkbox</type>
</CustomField>