force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_MDC_Component_Source__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Component_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDC Component Source</label>
    <referenceTo>SAJ_MDC_Component__c</referenceTo>
    <relationshipLabel>MDC Component Sources</relationshipLabel>
    <relationshipName>MDC_Components</relationshipName>
    <type>Lookup</type>
</CustomField>