force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_MDC_Component_Version__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Component_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDC Component Version</label>
    <referenceTo>SAJ_MDC_Component_Version__c</referenceTo>
    <relationshipLabel>MDC Component Versions</relationshipLabel>
    <relationshipName>MDC_Components</relationshipName>
    <type>Lookup</type>
</CustomField>