force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_NamespacePrefix__c.field-meta.xml
<CustomField>
    <fullName>SAJ_NamespacePrefix__c</fullName>
    <label>NamespacePrefix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>