force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Object_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Object Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>