force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Object_Name__c</fullName>
    <label>Object Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>