force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Object_Type</valueSetName>
    </valueSet>
</CustomField>