force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Parent_MDC_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Parent_MDC_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent MDC Component</label>
    <referenceTo>SAJ_MDC_Component__c</referenceTo>
    <relationshipLabel>Related MDC Components</relationshipLabel>
    <relationshipName>MDC_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>