force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Parent_MDC_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Parent_MDC_Component_Name__c</fullName>
    <formula>if(SAJ_Parent_MDC_Component__c = null, SAJ_Object_Name__c, SAJ_Parent_MDC_Component__r.SAJ_Object_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent MDC Component Name</label>
    <type>Text</type>
</CustomField>