force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Parent_MDC_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Parent_MDC_Component_Type__c</fullName>
    <formula>if (SAJ_Parent_MDC_Component__c = null, TEXT(SAJ_Object_Type__c),TEXT(SAJ_Parent_MDC_Component__r.SAJ_Object_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent MDC Component Type</label>
    <type>Text</type>
</CustomField>