force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Source_Org__c</fullName>
    <label>Source Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>