force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_State__c.field-meta.xml
<CustomField>
    <fullName>SAJ_State__c</fullName>
    <formula>IF (SAJ_MDC_Component_Version__r.SAJ_Active__c = true, IF (SAJ_MDC_Component_Version__r.SAJ_Version__c =&quot;1000000&quot;, &quot;New&quot;, &quot;Updated&quot;), &quot;Deleted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>