force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Sub_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Sub_Field_Type__c</fullName>
    <description>Type of field based upon the __c parsing</description>
    <formula>IF( ISPICKVAL(SAJ_Object_Type__c, &apos;CustomField&apos;)  ,  IF(  CONTAINS(SAJ_Object_Name__c, &apos;__c&apos;)  , &apos;CustomField&apos;, &apos;StandardField&apos;) , &apos;-&apos;)</formula>
    <label>Sub Field Type</label>
    <type>Text</type>
</CustomField>