force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_Sub_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Sub_Object_Type__c</fullName>
    <description>Type of Additional object</description>
    <formula>IF(CONTAINS(SAJ_Object_Name__c, &apos;__ChangeEvent&apos;) , &apos;Change Event&apos;, 
IF(CONTAINS(SAJ_Object_Name__c, &apos;__mdt&apos;) , &apos;Custom Metadata Type&apos;, 
IF(CONTAINS(SAJ_Object_Name__c, &apos;__History&apos;) , &apos;History&apos;, 
IF(CONTAINS(SAJ_Object_Name__c, &apos;__ka&apos;) , &apos;Knowledge Article&apos;, 
IF(CONTAINS(SAJ_Object_Name__c, &apos;__Share&apos;) , &apos;Share&apos;, 
IF(CONTAINS(SAJ_Object_Name__c, &apos;__Feed&apos;) , &apos;Feed&apos;,
IF(CONTAINS(SAJ_Object_Name__c, &apos;__ViewStat&apos;) , &apos;ViewStat&apos;,
IF(CONTAINS(SAJ_Object_Name__c, &apos;__VoteStat&apos;) , &apos;VoteStat&apos;,
IF(CONTAINS(SAJ_Object_Name__c, &apos;__VersionHistory&apos;) , &apos;VersionHistory&apos;,
IF(CONTAINS(SAJ_Object_Name__c, &apos;__DataCategorySelection&apos;) , &apos;DataCategorySelection&apos;,
   TEXT(SAJ_Object_Type__c) 
))))))))))</formula>
    <label>Sub Object Type</label>
    <type>Text</type>
</CustomField>