force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_VAR_Apex_Test__c.field-meta.xml
<CustomField>
    <fullName>SAJ_VAR_Apex_Test__c</fullName>
    <formula>includes(SAJ_MDC_Component_Version__r.SAJ_Apex_Annotation__c,&quot;IsTest&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Apex Test</label>
    <type>Checkbox</type>
</CustomField>