force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_VAR_Batch_Apex__c.field-meta.xml
<CustomField>
    <fullName>SAJ_VAR_Batch_Apex__c</fullName>
    <formula>INCLUDES( SAJ_MDC_Component_Version__r.SAJ_Apex_Interface_Class__c, &quot;Database.Batchable&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Batch Apex</label>
    <type>Checkbox</type>
</CustomField>