force-app/main/default/objects/SAJ_MDC_Component__c/fields/SAJ_VAR_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>SAJ_VAR_Permission_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAR Permission Set</label>
    <type>Checkbox</type>
</CustomField>