force-app/main/default/objects/SAJ_MDC_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAJ_Source_Org__c</columns>
    <columns>SAJ_Object_Name__c</columns>
    <columns>SAJ_Object_Type__c</columns>
    <columns>SAJ_Parent_MDC_Component__c</columns>
    <columns>SAJ_State__c</columns>
    <columns>SAJ_Diff__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>