force-app/main/default/objects/SAJ_MDC_Component__c/listViews/Apex_Triggers.listView-meta.xml
<ListView>
    <fullName>Apex_Triggers</fullName>
    <columns>SAJ_Source_Org__c</columns>
    <columns>SAJ_Object_Type__c</columns>
    <columns>NAME</columns>
    <columns>SAJ_MDC_Component_Source__c</columns>
    <columns>SAJ_MDC_Component_Version__c</columns>
    <columns>SAJ_Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Object_Type__c</field>
        <operation>equals</operation>
        <value>Apex Trigger</value>
    </filters>
    <label>Apex Triggers</label>
</ListView>