force-app/main/default/objects/SAJ_MDC_Component__c/listViews/Custom_object.listView-meta.xml
<ListView>
    <fullName>Custom_object</fullName>
    <columns>NAME</columns>
    <columns>SAJ_MDC_Component_Version__c</columns>
    <columns>SAJ_Object_Name__c</columns>
    <columns>SAJ_Object_Type__c</columns>
    <columns>SAJ_Parent_MDC_Component__c</columns>
    <columns>SAJ_Source_Org__c</columns>
    <columns>SAJ_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Object_Type__c</field>
        <operation>equals</operation>
        <value>CustomObject,StandardObject</value>
    </filters>
    <label>Custom object</label>
</ListView>