force-app/main/default/objects/SAJ_MDC_Component__c/listViews/MDC_Aura_Bundle.listView-meta.xml
<ListView>
    <fullName>MDC_Aura_Bundle</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Object_Type__c</field>
        <operation>equals</operation>
        <value>AuraDefinitionBundle</value>
    </filters>
    <label>Aura Bundle</label>
</ListView>