force-app/main/default/objects/SAJ_MDC_Component__c/listViews/SAJ_Apex_Pages.listView-meta.xml
<ListView>
    <fullName>SAJ_Apex_Pages</fullName>
    <columns>SAJ_Source_Org__c</columns>
    <columns>NAME</columns>
    <columns>SAJ_Object_Name__c</columns>
    <columns>SAJ_MDC_Component_Source__c</columns>
    <columns>SAJ_MDC_Component_Version__c</columns>
    <columns>SAJ_NamespacePrefix__c</columns>
    <columns>SAJ_Object_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Object_Type__c</field>
        <operation>equals</operation>
        <value>ApexPage</value>
    </filters>
    <label>Apex Pages</label>
</ListView>