force-app/main/default/objects/SAJ_MDC_Component__c/listViews/SAJ_ChangeEvent_Objects.listView-meta.xml
<ListView>
    <fullName>SAJ_ChangeEvent_Objects</fullName>
    <columns>NAME</columns>
    <columns>SAJ_MDC_Component_Version__c</columns>
    <columns>SAJ_Object_Name__c</columns>
    <columns>SAJ_Object_Type__c</columns>
    <columns>SAJ_Parent_MDC_Component__c</columns>
    <columns>SAJ_Source_Org__c</columns>
    <columns>SAJ_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAJ_Object_Name__c</field>
        <operation>contains</operation>
        <value>__ChangeEvent</value>
    </filters>
    <label>ChangeEvent Objects</label>
</ListView>